tests/lean/301.lean.expected.out
301.lean:1:9-1:17: error: missing cases:
(Nat.succ _)
